--- a/maze.css
+++ b/maze.css
@@ -2,6 +2,11 @@ body{
 	margin: 0px;
 }
 
+#displayGrid{
+  width: 500px;
+  height: 500px;
+}
+
 .grid-container{
 	padding: 0;
 	display: grid;
@@ -10,6 +15,8 @@ body{
 #invalidMove{
 	display: none;
 }
+
+
 
 /*.box {
 	grid-row: auto;
