--- a/maze.css
+++ b/maze.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
 body{
 	margin: 0px;
+	font-family: 'Press Start 2P', cursive;
 }
 
 #displayGrid{
