--- a/maze.css
+++ b/maze.css
@@ -1,11 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
 body{
 	margin: 0px;
-<<<<<<< HEAD
   overflow: hidden;
-=======
 	font-family: 'Press Start 2P', cursive;
->>>>>>> master
 }
 
 #displayGrid{
@@ -21,11 +18,13 @@ body{
 #invalidMove,
 #time{
 	color: white;
-	position: fixed;
-	margin: 10px;
 }
 
-<<<<<<< HEAD
+p{
+  padding-left: 5px;
+  float:left;
+}
+
 #GUI-header{
   display: table;
   height: 50px;
@@ -34,15 +33,9 @@ body{
 }
 
 
-=======
 #invalidMove
 {
 	display: none;
 	left: 40px;
 }
->>>>>>> master
 
-/*.box {
-	grid-row: auto;
-	grid-column: auto;
-}*/
